# dpo-rewrite

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: networkx_apply.py  simple_rule.py
src/dpo_rewrite/: __init__.py  apply.py  cypher.py  rules.py  schema.py
src/dpo_rewrite/schemas/: dpo_rule.schema.json
tests/: test_api.py  test_apply.py  test_cypher.py  test_rules.py  test_schema.py
