# pyproject.toml
[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dpo-rewrite"
version = "0.1.0"
description = "DPO graph rewriting core for graph databases."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["networkx", "jsonschema"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dpo_rewrite = ["schemas/*.schema.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
