# pyproject.toml
[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dpo-rewrite"
version = "0.1.3"
description = "DPO graph rewriting core for graph databases."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["networkx", "jsonschema"]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/Finradon/dpo-rewrite"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dpo_rewrite = ["schemas/*.schema.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
